# PlagiarismService

./: .gitignore  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.py
JSON-data/: README.md  create_code_submissions.txt  migrate_to_dockerdb.py  migrate_to_localdb.py  student-solutions-2025-11-29-updated.json  tasks.json
docker/init/: 01_databases.sql
src/: db.py  main.py  models.py  plagiarism.py
src/alembic/: env.py
src/alembic/versions/: b6215a55c570_init.py
src/core/: settings.py
src/core/core_dependency/: db_dependency.py
